<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="LibraryApp">Library App</string>
    <string name="SpotifyApp">Spotify Streamer</string>
    <string name="ScoresApp">Scores App</string>
    <string name="BuildItBigger">Build It Bigger App</string>
    <string name="XYZReader">XYZ reader</string>
    <string name="MyOwnApp">Capstone: My Own App</string>
    <string name="MyAppHeading">My Nanodegree Apps</string>
    <string name="DisplayMessage">This button will launch the </string>
</resources>
