<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusable="false">

    <TextView android:text="@string/MyAppHeading" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:autoText="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:password="false"
        android:focusableInTouchMode="false"
        android:textColor="#3b5998" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ScoresApp"
        android:id="@+id/button"
        android:clickable="true"
        android:background="@color/ThemeColor"
        android:textColor="#ffffff"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/LibraryApp"
        android:id="@+id/button2"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@color/ThemeColor"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/SpotifyApp"
        android:id="@+id/button3"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@color/ThemeColor"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:nestedScrollingEnabled="false"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/BuildItBigger"
        android:id="@+id/button4"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@color/ThemeColor"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/XYZReader"
        android:id="@+id/button5"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@color/ThemeColor"
        android:layout_below="@+id/button4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:onClick="displayMessage" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyOwnApp"
        android:id="@+id/button6"
        android:clickable="true"
        android:textColor="#ffffff"
        android:background="@color/ThemeColor"
        android:layout_below="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>
